test: add new tests for raise handling