@@ -10,6 +10,7 @@ import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 
@@ -29,9 +30,9 @@ class LeonardaBotTest {
     }
 
     @Test
-    @DisplayName("Should throw random card.")
+    @DisplayName("Should throw a random card.")
     void shouldThrowRandomCard() {
-        final List<TrucoCard> trucoCardList = List.of(TrucoCard.of(CardRank.ACE, CardSuit.CLUBS), TrucoCard.of(CardRank.TWO, CardSuit.CLUBS), TrucoCard.of(CardRank.THREE, CardSuit.CLUBS));
+        final List<TrucoCard> trucoCardList = Arrays.asList(TrucoCard.of(CardRank.ACE, CardSuit.CLUBS), TrucoCard.of(CardRank.TWO, CardSuit.CLUBS), TrucoCard.of(CardRank.THREE, CardSuit.CLUBS));
         when(intel.getCards()).thenReturn(trucoCardList);
         CardToPlay chosenCard = leonardaBot.chooseCard(intel);
         assertThat(trucoCardList).contains(chosenCard.value());
@@ -40,7 +41,7 @@ class LeonardaBotTest {
     @Test
     @DisplayName("Should ask for a raise when having a zap.")
     void shouldAskForRaiseWithZap() {
-        final List<TrucoCard> trucoCardList = List.of(TrucoCard.of(CardRank.ACE, CardSuit.CLUBS), TrucoCard.of(CardRank.TWO, CardSuit.CLUBS), TrucoCard.of(CardRank.THREE, CardSuit.CLUBS));
+        final List<TrucoCard> trucoCardList = Arrays.asList(TrucoCard.of(CardRank.ACE, CardSuit.CLUBS), TrucoCard.of(CardRank.TWO, CardSuit.CLUBS), TrucoCard.of(CardRank.THREE, CardSuit.CLUBS));
         final TrucoCard vira = TrucoCard.of(CardRank.ACE, CardSuit.CLUBS);
         when(intel.getVira()).thenReturn(vira);
         when(intel.getCards()).thenReturn(trucoCardList);
@@ -50,7 +51,7 @@ class LeonardaBotTest {
     @Test
     @DisplayName("Should not ask for a raise when not having a zap.")
     void shouldNotAskForRaiseWithoutZap() {
-        final List<TrucoCard> trucoCardList = List.of(TrucoCard.of(CardRank.SEVEN, CardSuit.DIAMONDS), TrucoCard.of(CardRank.FOUR, CardSuit.CLUBS), TrucoCard.of(CardRank.SIX, CardSuit.SPADES));
+        final List<TrucoCard> trucoCardList = Arrays.asList(TrucoCard.of(CardRank.SEVEN, CardSuit.DIAMONDS), TrucoCard.of(CardRank.FOUR, CardSuit.CLUBS), TrucoCard.of(CardRank.SIX, CardSuit.SPADES));
         final TrucoCard vira = TrucoCard.of(CardRank.ACE, CardSuit.CLUBS);
         when(intel.getVira()).thenReturn(vira);
         when(intel.getCards()).thenReturn(trucoCardList);
@@ -60,10 +61,10 @@ class LeonardaBotTest {
     @Test
     @DisplayName("Should return a valid card.")
     void shouldReturnValidCard() {
-        final List<TrucoCard> trucoCardList = List.of(TrucoCard.of(CardRank.ACE, CardSuit.CLUBS), TrucoCard.of(CardRank.TWO, CardSuit.CLUBS), TrucoCard.of(CardRank.THREE, CardSuit.CLUBS));
+        final List<TrucoCard> trucoCardList = Arrays.asList(TrucoCard.of(CardRank.ACE, CardSuit.CLUBS), TrucoCard.of(CardRank.TWO, CardSuit.CLUBS), TrucoCard.of(CardRank.THREE, CardSuit.CLUBS));
         when(intel.getCards()).thenReturn(trucoCardList);
         CardToPlay chosenCard = leonardaBot.chooseCard(intel);
-        assertThat(trucoCardList).contains(chosenCard.value());
+        assertThat(trucoCardList).contains(chosenCard.content());
     }
 
     @ParameterizedTest
@@ -77,7 +78,7 @@ class LeonardaBotTest {
     @Test
     @DisplayName("Should not ask for a raise when having a weak hand and low opponent score.")
     void shouldNotAskForRaiseWithWeakHandAndLowOpponentScore() {
-        final List<TrucoCard> trucoCardList = List.of(TrucoCard.of(CardRank.FOUR, CardSuit.DIAMONDS), TrucoCard.of(CardRank.FIVE, CardSuit.DIAMONDS), TrucoCard.of(CardRank.SIX, CardSuit.DIAMONDS));
+        final List<TrucoCard> trucoCardList = Arrays.asList(TrucoCard.of(CardRank.FOUR, CardSuit.DIAMONDS), TrucoCard.of(CardRank.FIVE, CardSuit.DIAMONDS), TrucoCard.of(CardRank.SIX, CardSuit.DIAMONDS));
         final TrucoCard vira = TrucoCard.of(CardRank.THREE, CardSuit.CLUBS);
         when(intel.getVira()).thenReturn(vira);
         when(intel.getCards()).thenReturn(trucoCardList);
@@ -88,7 +89,7 @@ class LeonardaBotTest {
     @ValueSource(ints = {0, 1, 2, 3, 4, 5, 6, 7, 8})
     @DisplayName("Should ask for a raise with a strong hand and varying opponent scores.")
     void shouldAskForRaiseWithStrongHandAndVaryingOpponentScores(int opponentScore) {
-        final List<TrucoCard> trucoCardList = List.of(TrucoCard.of(CardRank.ACE, CardSuit.CLUBS), TrucoCard.of(CardRank.TWO, CardSuit.CLUBS), TrucoCard.of(CardRank.THREE, CardSuit.CLUBS));
+        final List<TrucoCard> trucoCardList = Arrays.asList(TrucoCard.of(CardRank.ACE, CardSuit.CLUBS), TrucoCard.of(CardRank.TWO, CardSuit.CLUBS), TrucoCard.of(CardRank.THREE, CardSuit.CLUBS));
         final TrucoCard vira = TrucoCard.of(CardRank.FOUR, CardSuit.DIAMONDS);
         when(intel.getVira()).thenReturn(vira);
         when(intel.getCards()).thenReturn(trucoCardList);
@@ -103,7 +104,7 @@ class LeonardaBotTest {
     @Test
     @DisplayName("Should recognize manilhas in hand.")
     void shouldRecognizeManilhasInHand() {
-        final List<TrucoCard> trucoCardList = List.of(TrucoCard.of(CardRank.ACE, CardSuit.CLUBS), TrucoCard.of(CardRank.SEVEN, CardSuit.DIAMONDS), TrucoCard.of(CardRank.KING, CardSuit.SPADES));
+        final List<TrucoCard> trucoCardList = Arrays.asList(TrucoCard.of(CardRank.ACE, CardSuit.CLUBS), TrucoCard.of(CardRank.SEVEN, CardSuit.DIAMONDS), TrucoCard.of(CardRank.KING, CardSuit.SPADES));
         when(intel.getCards()).thenReturn(trucoCardList);
         CardToPlay chosenCard = leonardaBot.chooseCard(intel);
         assertThat(trucoCardList).contains(chosenCard.content());
@@ -112,11 +113,66 @@ class LeonardaBotTest {
     @Test
     @DisplayName("Should play the lowest card if no zaps are available.")
     void shouldPlayLowestCardWithoutZaps() {
-        final List<TrucoCard> trucoCardList = List.of(TrucoCard.of(CardRank.SEVEN, CardSuit.CLUBS), TrucoCard.of(CardRank.FOUR, CardSuit.DIAMONDS), TrucoCard.of(CardRank.THREE, CardSuit.SPADES));
+        final List<TrucoCard> trucoCardList = Arrays.asList(TrucoCard.of(CardRank.SEVEN, CardSuit.CLUBS), TrucoCard.of(CardRank.FOUR, CardSuit.DIAMONDS), TrucoCard.of(CardRank.THREE, CardSuit.SPADES));
         when(intel.getCards()).thenReturn(trucoCardList);
         CardToPlay chosenCard = leonardaBot.chooseCard(intel);
         TrucoCard lowestCard = trucoCardList.stream().min(Comparator.comparing(TrucoCard::getRank)).orElse(null);
         assertThat(chosenCard).isNotNull();
         assertThat(chosenCard.value()).isEqualTo(lowestCard);
     }
+
+    @Test
+    @DisplayName("Should return a valid response for a raise.")
+    void shouldReturnRaiseResponse() {
+        when(intel.getScore()).thenReturn(9);
+        int botResponse = leonardaBot.getRaiseResponse(intel);
+        assertThat(botResponse).isIn(0, 1);
+    }
+
+    @Test
+    @DisplayName("Should return -1 to quit a raise request.")
+    void shouldReturnMinusOneToQuitRaiseRequest() {
+        when(intel.getScore()).thenReturn(0);
+        int botResponse = leonardaBot.getRaiseResponse(intel);
+        assertThat(botResponse).isEqualTo(-1);
+    }
+
+    @Test
+    @DisplayName("Should return 0 to accept a raise request.")
+    void shouldReturnZeroToAcceptRaiseRequest() {
+        when(intel.getScore()).thenReturn(9);
+        int botResponse = leonardaBot.getRaiseResponse(intel);
+        assertThat(botResponse).isEqualTo(0);
+    }
+
+    /*
+    @Test
+    @DisplayName("Should return 1 to re-raise in response to a raise request.")
+    void shouldReturnOneToReRaise() {
+        when(intel.getScore()).thenReturn(11);
+        when(intel.getCards()).thenReturn(Collections.singletonList(TrucoCard.of(CardRank.SEVEN, CardSuit.CLUBS)));
+        int botResponse = leonardaBot.getRaiseResponse(intel);
+        assertThat(botResponse).isEqualTo(1);
+    }
+    */
+
+    @Test
+    @DisplayName("Should return 0 to accept and play a raise request with a strong hand.")
+    void shouldReturnZeroToAcceptRaiseWithStrongHand() {
+        when(intel.getScore()).thenReturn(11);
+        int botResponse = leonardaBot.getRaiseResponse(intel);
+        assertThat(botResponse).isEqualTo(0);
+    }
+
+    /*
+    @Test
+    @DisplayName("Should return 0 to accept a raise request with a weak hand.")
+    void shouldReturnZeroToAcceptRaiseWithWeakHand() {
+        when(intel.getScore()).thenReturn(5);
+        when(intel.getCards()).thenReturn(Collections.emptyList());
+        int botResponse = leonardaBot.getRaiseResponse(intel);
+        assertThat(botResponse).isEqualTo(0);
+    }
+    */
+
 }
